# netcoreqt

./: .gitignore  LICENSE  README.md  schema.md
src/: CMakeLists.txt  Main.qml  concepthostevent.h  main.cpp  netcorehost.cpp  netcorehost.h  netcorehostworker.cpp  netcorehostworker.h
src/include/: hostinghelpers.cpp  hostinghelpers.h  project.pro
src/netcore/NetCoreLibrary/: GlobalObject.cs  Helpers.cs  NetCoreLibrary.sln  NetCoreQtEntryPoint.cs  NetCoreQtLibrary.csproj  Program.cs  build.ps1  buildassembly.ps1  buildselfhosted.ps1  schema.test
src/netcore/NetCoreQt.Generator/: NetCoreQt.Generator.csproj  Program.cs
src/netcore/NetCoreQt.Generator.UnitTests/: CodeGeneratorUnitTests.cs  CodeSaverToFileIntegratedTests.cs  ConceptOfEvent.cs  ConceptOfEventUnitTests.cs  NetCoreQt.Generator.UnitTests.csproj  SchemaParserUnitTest.cs
src/netcore/NetCoreQt.Generator/CodeGenerators/: CodeGenerator.cs  CppEventCodeGenerator.cs  GeneratedResult.cs  GeneratedResultLanguage.cs  ICodeGenerator.cs
src/netcore/NetCoreQt.Generator/CodeSaver/: CodeSaverLanguage.cs  CodeSaverOptions.cs  CodeSaverToFile.cs  ICodeSaver.cs
src/netcore/NetCoreQt.Generator/GenerateClasses/: GenerateOperation.cs
src/netcore/NetCoreQt.Generator/Options/: GenerateOptions.cs
src/netcore/NetCoreQt.Generator/Properties/: launchSettings.json
src/netcore/NetCoreQt.Generator/SchemaParsers/: EntityLine.cs  GenerateEvent.cs  GenerateEventProperty.cs  GenerateSchema.cs  PropertyType.cs  Schema1dot0Parser.cs  SchemaParser.cs
src/netcore/NetCoreQt.Generator/Templates/: HostEventBaseClassInteral.template
src/netcoreqt/: CMakeLists.txt  main.cpp  netcorehost.h
